terraform/modules/aws/network/main.tf
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name        = "eks-devops-vpc"
    Environment = "dev"
    ManagedBy   = "Terraform"
  }
}

##########################################
# Internet Gateway
##########################################

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name        = "eks-devops-igw"
    Environment = "dev"
    ManagedBy   = "Terraform"
  }
}

##########################################
# Public Subnets
##########################################

resource "aws_subnet" "public-subnet-1" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_subnet_1_cidr
  availability_zone       = "ap-south-1a"
  map_public_ip_on_launch = true

  tags = {
    Name                     = "public-subnet-1"
    Type                     = "Public"
    ManagedBy                = "Terraform"
    "kubernetes.io/role/elb" = "1"
  }
}

resource "aws_subnet" "public-subnet-2" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_subnet_2_cidr
  availability_zone       = "ap-south-1b"
  map_public_ip_on_launch = true

  tags = {
    Name                     = "public-subnet-2"
    Type                     = "Public"
    ManagedBy                = "Terraform"
    "kubernetes.io/role/elb" = "1"
  }
}

/*
resource "aws_subnet" "public" {
  vpc_id = aws_vpc.main.id
  count = length(var.public_subnet_cidrs)
  cidr_block = var.public_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]
  map_public_ip_on_launch = true
}
*/

##########################################
# Private Subnet
##########################################

resource "aws_subnet" "private-subnet-1" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.private_subnet_1_cidr
  availability_zone       = "ap-south-1a"
  map_public_ip_on_launch = false

  tags = {
    Name                              = "private-subnet-1"
    Type                              = "Private"
    ManagedBy                         = "Terraform"
    "kubernetes.io/role/internal-elb" = "1"
  }
}

resource "aws_subnet" "private-subnet-2" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.private_subnet_2_cidr
  availability_zone       = "ap-south-1b"
  map_public_ip_on_launch = false

  tags = {
    Name                              = "private-subnet-2"
    Type                              = "Private"
    ManagedBy                         = "Terraform"
    "kubernetes.io/role/internal-elb" = "1"
  }
}

/*
resource "aws_subnet" "private" {
  vpc_id = aws_vpc.main.id
  count = length(var.private_subnet_cidrs)
  cidr_block = var.private_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]
}
*/

##########################################
# Elastic IP for NAT Gateway
##########################################

resource "aws_eip" "nat" {
  domain = "vpc"
  tags = {
    Name        = "nat-eip"
    Environment = "dev"
    ManagedBy   = "Terraform"
  }
}

##########################################
# NAT Gateway
##########################################

resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public-subnet-1.id
  tags = {
    Name        = "eks-devops-nat"
    Environment = "dev"
    ManagedBy   = "Terraform"
  }

  depends_on = [
    aws_internet_gateway.main
  ]
}

##########################################
# Public Route Table
##########################################

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name      = "public-route-table"
    ManagedBy = "Terraform"
  }
}

##########################################
# Private Route Table
##########################################

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main.id
  }

  tags = {
    Name      = "private-route-table"
    ManagedBy = "Terraform"
  }
}

##########################################
# Route Table Associations
##########################################

resource "aws_route_table_association" "public_1" {
  subnet_id      = aws_subnet.public-subnet-1.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_2" {
  subnet_id      = aws_subnet.public-subnet-2.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private_1" {
  subnet_id      = aws_subnet.private-subnet-1.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_2" {
  subnet_id      = aws_subnet.private-subnet-2.id
  route_table_id = aws_route_table.private.id
}
